objects/CaseFinalVariables__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CASE_PRIORITY_HIGHT_STRING__c</fullName>
        <defaultValue>&quot;Hight&quot;</defaultValue>
        <label>CASE_PRIORITY_HIGHT_STRING</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CASE_STATUS_CLOSED_SPAM_STRING__c</fullName>
        <defaultValue>&quot;Closed (SPAM)&quot;</defaultValue>
        <label>CASE_STATUS_CLOSED_SPAM_STRING</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CASE_STATUS_IN_PROGRESS_CUSTOMER_STRING__c</fullName>
        <defaultValue>&quot;In-progress (Customer)&quot;</defaultValue>
        <label>CASE_STATUS_IN_PROGRESS_CUSTOMER_STRING</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CASE_STATUS_NEW_STRING__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>CASE_STATUS_NEW_STRING</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TE_PIC_CONTACT_RECORD_TYPE_STRING__c</fullName>
        <defaultValue>&quot;PIC Contact&quot;</defaultValue>
        <label>TE_PIC_CONTACT_RECORD_TYPE_STRING</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_PIC_STANDART_CASE_RECORD_TYPE_STRING__c</fullName>
        <defaultValue>&quot;TE PIC Standard Case Record Type&quot;</defaultValue>
        <label>TE_PIC_STANDART_CASE_RECORD_TYPE_STRING</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Case Final Variables</label>
</CustomObject>